top: Add pre-commit hook for vermin.
This commit introduces a pre-commit hook that will check if new code
being committed doesn't exceed the required minimum supported version.

Now that the target Python version for code in this repository was
bumped up to 3.8, it makes sense to make sure this requirement will be
maintained for new code being checked in.

The version check is done using Vermin
(https://github.com/netromdk/vermin), which already contains a suitable
pre-commit hook to be used for this purpose.

Signed-off-by: Alessandro Gatti <a.gatti@frob.it>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,11 @@ repos:
         name: Spellcheck for changed files (codespell)
         additional_dependencies:
           - tomli
+  - repo: https://github.com/netromdk/vermin
+    # Version should be kept in sync with .github/workflows/vermin.yml
+    rev: v1.8.0
+    hooks:
+      - id: vermin
+        exclude: tests/.*/.*
+        args: ["--no-tips", "--no-parse-comments", "--backport argparse", "--target=3.8-", "--violations"]
+        stages: [pre-commit]
